@@ -34,13 +34,28 @@ $result = $db->Execute("SELECT * FROM {$db->prefix}ships WHERE email = ?;", arra
 Bnt\Db::logDbErrors($db, $result, __LINE__, __FILE__);
 $playerinfo = $result->fields;
 
+// Pull the presets for the player from the db.
+$i=0;
+$debug_query = $db->Execute("SELECT * FROM {$db->prefix}presets WHERE ship_id=?", array($playerinfo['ship_id']));
+Bnt\Db::logDbErrors($db, $debug_query ,__LINE__, __FILE__);
+while (!$debug_query->EOF)
+{
+    $presetinfo[$i] = $debug_query->fields;
+    $debug_query->MoveNext();
+    $i++;
+}
+
 $preset_list = array();
 
-// Returns null if it doesn't have it set, boolean false if its set but fails to validate and the actual value if it all passes.
-$preset_list[1]  = filter_input(INPUT_POST, 'preset1', FILTER_VALIDATE_INT, array('options' => array('min_range' => 1, 'max_range' => $bntreg->sector_max)));
-$preset_list[2]  = filter_input(INPUT_POST, 'preset2', FILTER_VALIDATE_INT, array('options' => array('min_range' => 1, 'max_range' => $bntreg->sector_max)));
-$preset_list[3]  = filter_input(INPUT_POST, 'preset3', FILTER_VALIDATE_INT, array('options' => array('min_range' => 1, 'max_range' => $bntreg->sector_max)));
-
+// Filter the array of presets from the form submission
+if (isset($_POST['preset']))
+{
+    foreach ($_POST['preset'] as $key => $value)
+    {
+        // Returns null if it doesn't have it set, boolean false if its set but fails to validate and the actual value if it all passes.
+        $preset_list[$key] = filter_var($_POST['preset'][$key], FILTER_VALIDATE_INT, array('options' => array('min_range' => 1, 'max_range' => $bntreg->sector_max)));
+    }
+}
 $change = filter_input(INPUT_POST, 'change', FILTER_VALIDATE_INT, array('options' => array('min_range' => 0, 'max_range' => 1)));
 
 foreach ($preset_list as $index => $preset)
@@ -48,9 +63,9 @@ foreach ($preset_list as $index => $preset)
     if ($preset === false)
     {
         $change = 0;
-        $_langvars['l_pre_invalid'] = str_replace("[preset]", $index, $langvars['l_pre_invalid']);
-        $_langvars['l_pre_invalid'] = str_replace("[sector_max]", $bntreg->sector_max, $_langvars['l_pre_invalid']);
-        echo $_langvars['l_pre_invalid'] . "<br>\n";
+        $result = str_replace("[preset]", $_POST['preset'][$index], $langvars['l_pre_exceed']);
+        $result = str_replace("[sector_max]", $bntreg->sector_max, $result);
+        echo $result . "<br>\n";
     }
 }
 echo "<br>\n";
@@ -58,9 +73,11 @@ echo "<br>\n";
 if ($change !== 1)
 {
     echo "<form action='preset.php' method='post'>";
-    echo "<div style='padding:2px;'>Preset 1: <input type='text' name='preset1' size='6' maxlength='6' value='{$playerinfo['preset1']}'></div>";
-    echo "<div style='padding:2px;'>Preset 2: <input type='text' name='preset2' size='6' maxlength='6' value='{$playerinfo['preset2']}'></div>";
-    echo "<div style='padding:2px;'>Preset 3: <input type='text' name='preset3' size='6' maxlength='6' value='{$playerinfo['preset3']}'></div>";
+    for ($x=0; $x<$bntreg->preset_max; $x++)
+    {
+        echo "<div style='padding:2px;'>Preset " . ($x+1) . ": <input type='text' name='preset[$x]' size='6' maxlength='6' value='" . $presetinfo[$x]['preset'] . "'></div>";
+    }
+
     echo "<input type='hidden' name='change' value='1'>";
     echo "<div style='padding:2px;'><input type='submit' value=" . $langvars['l_pre_save'] . "></div>";
     echo "</form>";
@@ -68,12 +85,17 @@ if ($change !== 1)
 }
 else
 {
-    $update = $db->Execute("UPDATE {$db->prefix}ships SET preset1 = ?, preset2 = ?, preset3 = ? WHERE ship_id = ?;", array ($preset_list[1], $preset_list[2], $preset_list[3], $playerinfo['ship_id']));
-    Bnt\Db::logDbErrors($db, $update, __LINE__, __FILE__);
-    $langvars['l_pre_set'] = str_replace("[preset1]", "<a href=rsmove.php?engage=1&destination=$preset_list[1]>$preset_list[1]</a>", $langvars['l_pre_set']);
-    $langvars['l_pre_set'] = str_replace("[preset2]", "<a href=rsmove.php?engage=1&destination=$preset_list[2]>$preset_list[2]</a>", $langvars['l_pre_set']);
-    $langvars['l_pre_set'] = str_replace("[preset3]", "<a href=rsmove.php?engage=1&destination=$preset_list[3]>$preset_list[3]</a>", $langvars['l_pre_set']);
-    echo $langvars['l_pre_set'] . "<br><br>";
+    foreach ($_POST['preset'] as $key=>$value)
+    {
+        if ($key < $bntreg->preset_max)
+        {
+            $update = $db->Execute("UPDATE {$db->prefix}presets SET preset = ? WHERE preset_id = ?;", array ($preset_list[$key], $presetinfo[$key]['preset_id']));
+            Bnt\Db::logDbErrors($db, $update, __LINE__, __FILE__);
+            $preset_result_echo = str_replace("[preset]", "<a href=rsmove.php?engage=1&destination=$preset_list[$key]>$preset_list[$key]</a>", $langvars['l_pre_set_loop']);
+            $preset_result_echo = str_replace("[num]", $key+1, $preset_result_echo);
+            echo $preset_result_echo . "<br>";
+        }
+    }
 }
 
 Bnt\Text::gotoMain($db, $lang, $langvars);
