@@ -1,3 +1,7 @@
+TheKabal (21 June 2014)
+--------------------------------------
+Split presets out into its own table, increase default max preset count to five
+
 TheKabal (11 June 2014)
 --------------------------------------
 Fixes for cookie handling
